// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`user mutations login with correct password 1`] = `
{
  "body": {
    "kind": "single",
    "singleResult": {
      "data": {
        "login": {
          "email": "member@member.com",
          "firstName": "User",
          "lastName": "Test",
          "token": "token",
        },
      },
      "errors": undefined,
    },
  },
  "http": {
    "headers": Map {
      "cache-control" => "no-store",
    },
    "status": undefined,
  },
}
`;

exports[`user mutations signUp 1`] = `
{
  "body": {
    "kind": "single",
    "singleResult": {
      "data": {
        "signUp": {
          "email": "test@test.com",
          "firstName": "User",
          "id": "2",
          "lastName": "Test",
          "token": "token",
        },
      },
      "errors": undefined,
    },
  },
  "http": {
    "headers": Map {
      "cache-control" => "no-store",
    },
    "status": undefined,
  },
}
`;
